src/tests/testfiles/const/7.txt
testfiles/const/7.c:5:8: error: initializing 'int * *' with an expression of type 'int * const *' discards 'const' qualifier
int** intarray[] = {aaa};
   ^
